--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -7,6 +7,7 @@
     <script src="/layui/layui.js"></script>
 </head>
 
+<!--按条件查询-->
 <form class="layui-form" action="" style="margin-top: 10px">
     <div class="layui-inline">
         <label class="layui-form-label">进度ID</label>
@@ -21,6 +22,12 @@
         </div>
     </div>
     <div class="layui-inline">
+        <label class="layui-form-label">创建人</label>
+        <div class="layui-input-inline">
+            <input type="text" name="createBy" placeholder="请输入创建人" autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-inline">
         <div class="layui-input-inline">
             <button class="layui-btn" lay-submit lay-filter="selectFormFilter">查询</button>
             <button type="reset" class="layui-btn layui-btn-primary" id="myButton">重置</button>
@@ -30,6 +37,7 @@
 
 
 <body>
+<!--分层，层级显示客户关联表-->
 <div class="layui-col-md12">
     <div class="layui-card">
         <div class="layui-card-body">
@@ -338,7 +346,7 @@
                     {field: 'progressId', title: '进度ID', width: 80, fixed: 'left'},
                     {field: 'progressType', title: '进度类型', width: 120},
                     {
-                        field: 'upload', title: '上传文件名', width: 170,
+                        field: 'upload', title: '上传文件名(点击下载)', width: 170,
                         templet: function (progress) {
                             if (progress.upload != null) {
                                 return '<a href="' + progress.uploadClass.destinationName + '">' + progress.uploadClass.sourceName + '</a>';
@@ -348,7 +356,7 @@
                         }
                     },
                     {
-                        field: 'notice', title: '通知文件名', width: 170,
+                        field: 'notice', title: '通知文件名(点击下载)', width: 170,
                         templet: function (progress) {
                             if (progress.notice != null) {
                                 return '<a href="' + progress.uploadClass.destinationName + '">' + progress.uploadClass.sourceName + '</a>';
@@ -485,6 +493,7 @@
             elem: '#insertAddUpload'
             , url: '/file/upload' //上传接口
             , accept: 'file' //普通文件
+            , exts: 'zip|rar'
             , done: function (res) {
                 if (res.response === 'success') {
                     let src = "https://" + res.name;
@@ -514,6 +523,7 @@
             elem: '#insertInformUpload'
             , url: '/file/upload' //上传接口
             , accept: 'file' //普通文件
+            , exts: 'zip|rar'
             , done: function (res) {
                 if (res.response === 'success') {
                     let src = "https://" + res.name;
@@ -543,6 +553,7 @@
             elem: '#updateAddUpload'
             , url: '/file/upload' //上传接口
             , accept: 'file' //普通文件
+            , exts: 'zip|rar'
             , done: function (res) {
                 if (res.response === 'success') {
                     let src = "https://" + res.name;
@@ -571,6 +582,7 @@
             elem: '#updateInformUpload'
             , url: '/file/upload' //上传接口
             , accept: 'file' //普通文件
+            , exts: 'zip|rar'
             , done: function (res) {
                 if (res.response === 'success') {
                     let src = "https://" + res.name;
@@ -600,8 +612,9 @@
             console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
             progressTable.reload({
                 where: { //设定异步数据接口的额外参数，任意设
-                    progressId: data.field.progressId
-                    , progressType: data.field.progressType
+                    progressId: data.field.progressId,
+                    progressType: data.field.progressType,
+                    createBy: data.field.createBy
                 }
                 , page: {
                     curr: 1 //重新从第 1 页开始
@@ -614,8 +627,9 @@
         $("#myButton").click(function () {
             progressTable.reload({
                 where: { //设定异步数据接口的额外参数，任意设
-                    progressId: ""
-                    , progressType: ""
+                    progressId: "",
+                    progressType: "",
+                    createBy: ""
                 }
                 , page: {
                     curr: 1 //重新从第 1 页开始
