--- a/src/main/resources/templates/visitEchart.html
+++ b/src/main/resources/templates/visitEchart.html
@@ -8,20 +8,243 @@
     <script src="/echarts/echarts.js"></script>
     <script src="/echarts/chalk.js"></script>
 </head>
-<body>
-回访分析
+<body style="background-color: rgb(57,61,73)">
+
+
+<div class="layui-carousel" id="shuffling"
+     style="background-color: rgb(57,61,73);position:absolute;top:50%;left:50%;transform: translate(-50%,-50%);">
+    <div carousel-item="">
+        <div style="background-color: rgb(57,61,73)">
+            <!--条件显示图表-->
+            <form class="layui-form" style="position:absolute;left:44%;transform: translate(-50%);">
+                <span style="font-size: 18px;font-weight: bold;color: white;">日期区间：</span>
+                <div class="layui-inline">
+                    <div class="layui-input-inline">
+                        <input type="text" name="startTime" id="startDate" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                    </div>
+                    <span style="font-size: 18px;font-weight: bold;color: white;">—</span>
+                    <div class="layui-input-inline">
+                        <input type="text" name="endTime" id="endDate" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <button class="layui-btn" lay-submit lay-filter="timeFilter" data-type="reload">搜索</button>
+            </form>
+            <!--图表显示-->
+            <div id="visitEchartName" style="height:540px;width: 1000px;top:40px"></div>
+        </div>
+        <div style="background-color: rgb(57,61,73)">
+            <!--条件显示图表-->
+            <form class="layui-form" style="position:absolute;left:44%;transform: translate(-50%);">
+                <span style="font-size: 18px;font-weight: bold;color: white;">代理人：</span>
+                <div class="layui-inline">
+                    <div class="layui-input-inline">
+                        <input type="text" name="loginName" autocomplete="off" placeholder="请输入代理人登录名" class="layui-input">
+                    </div>
+                </div>
+                <button class="layui-btn" lay-submit lay-filter="loginNameFilter" data-type="reload">搜索</button>
+            </form>
+            <!--图表显示-->
+            <div id="visitEchartTime" style="height:540px;width: 1000px;top:40px"></div>
+        </div>
+    </div>
+</div>
 </body>
 <script>
-    layui.use(['jquery'], function () {
+    layui.use(['jquery','carousel','laydate','form'], function () {
         var $=layui.jquery;
-        $.ajax({
-            url: "/business/visitEchart",
-            type: "GET",
-            dataType: "JSON",
-            success: function (data) {
+        var carousel = layui.carousel;
+        var laydate = layui.laydate;
+        var form = layui.form;
 
-            }
-        })
+        //日期
+        laydate.render({
+            elem: '#startDate'
+        });
+        laydate.render({
+            elem: '#endDate'
+        });
+
+        //常规轮播
+        carousel.render({
+            elem: '#shuffling'
+            , arrow: 'always'
+            , width: '1000px'
+            , height: '580px'
+            , interval: 5000
+        });
+
+        //调用考勤图方法
+        showChartName("");
+        showChartTime("");
+
+        //表单提交
+        form.on('submit(timeFilter)', function (data) {
+            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+            let str = "?startTime="+data.field.startTime+"&endTime="+data.field.endTime
+            //调用考勤图方法
+            showChartName(str)
+            return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
+        });
+
+        //表单提交
+        form.on('submit(loginNameFilter)', function (data) {
+            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+            let str = "?loginName="+data.field.loginName
+            //调用考勤图方法
+            showChartTime(str)
+            return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
+        });
+
+        //考勤图方法
+        function showChartName(str){
+            $.ajax({
+                url: "/business/visitEchartName"+str,
+                type: "GET",
+                dataType: "JSON",
+                success: function (data) {
+                    if (data.code == 0) {
+                        //获取横坐标
+                        var loginNameX = data.data.loginNameX;
+                        // 获取y坐标1
+                        var visitCountY = data.data.visitCountY;
+                        // 获取y坐标2
+                        // var checkOutY = data.data.checkOutY;
+                        // 基于准备好的dom，初始化echarts实例
+                        var myChartName = echarts.init(document.getElementById('visitEchartName'), 'chalk');
+                        // 指定图表的配置项和数据
+                        var optionName = {
+                            title: {
+                                text: '回访分析',
+                                subtext: '回访数量'
+                            },
+                            tooltip: {
+                                trigger: 'axis'
+                            },
+                            legend: {
+                                data: ['回访数量']
+                            },
+                            toolbox: {
+                                show: true,
+                                feature: {
+                                    dataView: {show: true, readOnly: false},
+                                    magicType: {show: true, type: ['line', 'bar']},
+                                    restore: {show: true},
+                                    saveAsImage: {show: true}
+                                }
+                            },
+                            calculable: true,
+                            xAxis: [
+                                {
+                                    type: 'category',
+                                    data: loginNameX
+                                }
+                            ],
+                            yAxis: [
+                                {
+                                    type: 'value',
+                                }
+                            ],
+                            series: [
+                                {
+                                    name: '回访数量',
+                                    type: 'line',
+                                    data: visitCountY,
+                                    markPoint: {
+                                        data: [
+                                            {type: 'max', name: '最大值'},
+                                            {type: 'min', name: '最小值'}
+                                        ]
+                                    },
+                                    markLine: {
+                                        data: [
+                                            {type: 'average', name: '平均值'}
+                                        ]
+                                    }
+                                }
+                            ]
+                        };
+                        // 使用刚指定的配置项和数据显示图表。
+                        myChartName.setOption(optionName);
+                    }
+                }
+            })
+        }
+
+        function showChartTime(str){
+            $.ajax({
+                url: "/business/visitEchartTime"+str,
+                type: "GET",
+                dataType: "JSON",
+                success: function (data) {
+                    console.log(data.data.monthX)
+                    console.log(data.data.visitCountY)
+                    if (data.code == 0) {
+                        //获取横坐标
+                        var monthX = data.data.monthX;
+                        // 获取y坐标1
+                        var visitCountY = data.data.visitCountY;
+                        // 获取y坐标2
+                        // var checkOutY = data.data.checkOutY;
+                        // 基于准备好的dom，初始化echarts实例
+                        var myChartTime = echarts.init(document.getElementById('visitEchartTime'), 'chalk');
+                        // 指定图表的配置项和数据
+                        var optionTime = {
+                            title: {
+                                text: '回访分析',
+                                subtext: '回访数量'
+                            },
+                            tooltip: {
+                                trigger: 'axis'
+                            },
+                            legend: {
+                                data: ['回访数量']
+                            },
+                            toolbox: {
+                                show: true,
+                                feature: {
+                                    dataView: {show: true, readOnly: false},
+                                    magicType: {show: true, type: ['line', 'bar']},
+                                    restore: {show: true},
+                                    saveAsImage: {show: true}
+                                }
+                            },
+                            calculable: true,
+                            xAxis: [
+                                {
+                                    type: 'category',
+                                    data: monthX
+                                }
+                            ],
+                            yAxis: [
+                                {
+                                    type: 'value',
+                                }
+                            ],
+                            series: [
+                                {
+                                    name: '回访数量',
+                                    type: 'line',
+                                    data: visitCountY,
+                                    markPoint: {
+                                        data: [
+                                            {type: 'max', name: '最大值'},
+                                            {type: 'min', name: '最小值'}
+                                        ]
+                                    },
+                                    markLine: {
+                                        data: [
+                                            {type: 'average', name: '平均值'}
+                                        ]
+                                    }
+                                }
+                            ]
+                        };
+                        // 使用刚指定的配置项和数据显示图表。
+                        myChartTime.setOption(optionTime);
+                    }
+                }
+            })
+        }
     })
 </script>
 </html>
