--- a/src/main/resources/templates/visitEchart.html
+++ b/src/main/resources/templates/visitEchart.html
@@ -38,7 +38,7 @@
                 <span style="font-size: 18px;font-weight: bold;color: white;">代理人：</span>
                 <div class="layui-inline">
                     <div class="layui-input-inline">
-                        <input type="text" name="loginName" autocomplete="off" placeholder="请输入代理人登录名" class="layui-input">
+                        <input type="text" name="loginName" id="nameTableSelect" autocomplete="off" placeholder="请输入代理人登录名" class="layui-input">
                     </div>
                 </div>
                 <button class="layui-btn" lay-submit lay-filter="loginNameFilter" data-type="reload">搜索</button>
@@ -50,11 +50,42 @@
 </div>
 </body>
 <script>
-    layui.use(['jquery','carousel','laydate','form'], function () {
+    //自定义layui组件的目录
+    layui.config({
+        base: '/layui/lay/modules/'
+    }).extend({
+        //设定组件别名
+        tableSelect: 'tableSelect',
+    });
+    layui.use(['jquery','carousel','laydate','form','tableSelect'], function () {
         var $=layui.jquery;
         var carousel = layui.carousel;
         var laydate = layui.laydate;
         var form = layui.form;
+        var tableSelect = layui.tableSelect
+
+        tableSelect.render({
+            elem: '#nameTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'userId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'loginName',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '真实姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url: '/user/findAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        , {field: 'userId', title: '编号', width: 80, sort: true}
+                        , {field: 'loginName', title: '登录名', width: 100}
+                        , {field: 'userName', title: '真实姓名', width: 120}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].loginName)
+            }
+        })
 
         //日期
         laydate.render({
