--- a/src/main/resources/templates/progressEchart.html
+++ b/src/main/resources/templates/progressEchart.html
@@ -8,20 +8,196 @@
     <script src="/echarts/echarts.js"></script>
     <script src="/echarts/chalk.js"></script>
 </head>
-<body>
-进度分析
+<body style="background-color: rgb(57,61,73)">
+<!--条件查询-->
+<form class="layui-form" style="margin-top: 10px;margin-left: 10px;position:absolute;left:50%;transform: translate(-50%);">
+    <span style="font-size: 18px;font-weight: bold;color: white;">代理人：</span>
+    <div class="layui-inline">
+        <div class="layui-input-inline">
+            <input type="text"  readonly autocomplete="off" class="layui-input"
+                   name="loginName" id="loginName" placeholder="请输入代理人" >
+        </div>
+    </div>
+    <span style="font-size: 18px;font-weight: bold;color: white;">进度类型：</span>
+    <div class="layui-inline">
+        <div class="layui-input-inline">
+            <input name="processId" id="processId" hidden>
+            <input type="text"  readonly autocomplete="off" class="layui-input"
+                   name="processType" id="processType" placeholder="请输入进度类型" >
+        </div>
+    </div>
+    <button class="layui-btn" lay-submit lay-filter="selectConditionFilter" data-type="reload">搜索</button>
+    <button type="reset" class="layui-btn layui-btn-primary" id="myButton">重置</button>
+</form>
+<div class="layui-carousel" id="shuffling"
+     style="background-color: rgb(57,61,73);position:absolute;top:57%;left:50%;transform: translate(-50%,-50%);">
+    <div carousel-item="">
+        <div>
+            <div id="progressCount" style="height:540px"></div>
+        </div>
+    </div>
+</div>
 </body>
 <script>
-    layui.use(['jquery'], function () {
-        var $=layui.jquery;
-        $.ajax({
-            url: "/business/progressEchart",
+
+    //自定义layui组件的目录
+    layui.config({
+        base: '/layui/lay/modules/'
+    }).extend({
+        //设定组件别名
+        tableSelect: 'tableSelect',
+    });
+        layui.use(['jquery','table','carousel','tableSelect','laydate','form'], function () {
+            let $=layui.jquery;
+            let carousel = layui.carousel;
+            let form = layui.form;
+            let tableSelect = layui.tableSelect;
+
+            $("#myButton").click(function () {
+                        showChart("");
+
+            })
+            //添加代理人选择表格
+            tableSelect.render({
+                elem: '#loginName',	//定义输入框input对象 必填
+                checkedKey: 'userId', //表格的唯一建值，非常重要，影响到选中状态 必填
+                searchKey: 'userName',	//搜索输入框的name值 默认keyword
+                table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                    url: '/user/findAll',
+                    cols: [
+                        [
+                            {type: 'radio'}
+                            , {field: 'userId', title: '编号', width: 80, sort: true}
+                            , {field: 'loginName', title: '登录名', width: 100}
+                            , {field: 'userName', title: '真实姓名', width: 120}
+                        ]
+                    ]
+                },
+                done: function (elem, data) {
+                    //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                    //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+
+                    console.log(data.data)
+                    elem.val(data.data[0].loginName)
+                }
+            })
+
+            //修改代理人选择表格
+            tableSelect.render({
+                elem: '#processType',	//定义输入框input对象 必填
+                checkedKey: 'dictionaryId', //表格的唯一建值，非常重要，影响到选中状态 必填
+                searchKey: 'processType',	//搜索输入框的name值 默认keyword
+                table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                    url: '/business/selectProcessType?typeId=4',
+                    cols: [
+                        [
+                            {type: 'radio'}
+
+                            , {field: 'dictionaryName', title: '进度类型', width: 120}
+                            , {field: 'dictionaryId', title: '进度编号', width: 120}
+                        ]
+                    ]
+                },
+                done: function (elem, data) {
+                    console.log(data.data)
+                    //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                    //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                    elem.val(data.data[0].dictionaryName)
+                    $("#processId").val(data.data[0].dictionaryId)
+                }
+            })
+
+            //常规轮播
+        carousel.render({
+            elem: '#shuffling'
+            , arrow: 'always'
+            , width: '1000px'
+            , height: '540px'
+            , interval: 5000
+        });
+            //表单提交
+            form.on('submit(selectConditionFilter)', function (data) {
+                console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+                let str = "?loginName="+data.field.loginName+"&processId="+data.field.processId
+                console.log(str)
+                //调用考勤图方法
+                showChart(str)
+                return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
+            });
+
+            //调用考勤图方法
+            showChart("");
+
+            function showChart(str){ $.ajax({
+            url: "/business/progressEchartTime"+str,
             type: "GET",
             dataType: "JSON",
             success: function (data) {
-
+                if (data.code == 0) {
+                    //获取横坐标
+                    var monthX = data.data.monthX;
+                    // 获取y坐标1
+                    var progressCountY = data.data.progressCountY;
+                    var myChart = echarts.init(document.getElementById('progressCount'), 'chalk');
+                    // 指定图表的配置项和数据
+                    var option = {
+                        title: {
+                            text: '进度量走势图',
+                            subtext: '进度量'
+                        },
+                        tooltip: {
+                            trigger: 'axis'
+                        },
+                        legend: {
+                            data: ['进度量']
+                        },
+                        toolbox: {
+                            show: true,
+                            feature: {
+                                dataView: {show: true, readOnly: false},
+                                magicType: {show: true, type: ['line', 'bar']},
+                                restore: {show: true},
+                                saveAsImage: {show: true}
+                            }
+                        },
+                        calculable: true,
+                        xAxis: [
+                            {
+                                type: 'category',
+                                data: monthX
+                            }
+                        ],
+                        yAxis: [
+                            {
+                                type: 'value'
+                            }
+                        ],
+                        series: [
+                            {
+                                name: '进度量',
+                                type: 'bar',
+                                data: progressCountY,
+                                markPoint: {
+                                    data: [
+                                        {type: 'max', name: '最大值'},
+                                        {type: 'min', name: '最小值'}
+                                    ]
+                                },
+                                markLine: {
+                                    data: [
+                                        {type: 'average', name: '平均值'}
+                                    ]
+                                }
+                            }
+                        ]
+                    };
+                    // 使用刚指定的配置项和数据显示图表。
+                    myChart.setOption(option);
+                }
             }
+        });
+            }
+
         })
-    })
 </script>
 </html>
