--- a/src/main/resources/templates/attendanceTable.html
+++ b/src/main/resources/templates/attendanceTable.html
@@ -59,7 +59,7 @@
             , cols: [
                 [ //表头
                     {field: 'attendanceId', title: '考勤编号', width: 120, sort: true}
-                    , {field: 'userId', title: '人员编号', width: 120, sort: true}
+                    , {field: 'loginName', title: '员工姓名', width: 120}
                     , {field: 'checkIn', title: '签到时间', width: 200}
                     , {field: 'checkOut', title: '签退时间', width: 200}
                 ]]
