--- a/src/main/resources/templates/visitEchart.html
+++ b/src/main/resources/templates/visitEchart.html
@@ -227,7 +227,7 @@
                         // 基于准备好的dom，初始化echarts实例
                         var myChartTime = echarts.init(document.getElementById('visitEchartTime'), 'chalk');
                         if (loginName == null || loginName === ""){
-                            loginName = 'admin'
+                            loginName = 'enzo'
                         }
                         // 指定图表的配置项和数据
                         var optionTime = {
