--- a/src/main/resources/templates/businessEchart.html
+++ b/src/main/resources/templates/businessEchart.html
@@ -8,20 +8,295 @@
     <script src="/echarts/echarts.js"></script>
     <script src="/echarts/chalk.js"></script>
 </head>
-<body>
-业务分析
+<body style="background-color: rgb(57,61,73)">
+<div style="margin-top: 1%">
+    <span id="trademark" style="font-size: 18px;font-weight: bold;color: white;margin-left: 10%"></span>
+    <span id="copyright" style="font-size: 18px;font-weight: bold;color: white;margin-left: 20%"></span>
+    <span id="patent" style="font-size: 18px;font-weight: bold;color: white;margin-left: 20%"></span>
+    <span id="property" style="font-size: 18px;font-weight: bold;color: white;margin-left: 20%"></span>
+</div>
+
+<div class="layui-carousel" id="shuffling"
+     style="background-color: rgb(57,61,73);position:absolute;top:50%;left:50%;transform: translate(-50%,-50%);">
+    <div carousel-item="">
+        <div style="background-color: rgb(57,61,73)">
+            <!--条件显示图表-->
+            <form class="layui-form" style="position:absolute;left:44%;transform: translate(-50%);">
+                <span style="font-size: 18px;font-weight: bold;color: white;">代理人：</span>
+                <div class="layui-inline">
+                    <div class="layui-input-inline">
+                        <input type="text" name="loginName" id="nameTableSelect" autocomplete="off" placeholder="请输入代理人登录名" class="layui-input">
+                    </div>
+                </div>
+                <button class="layui-btn" lay-submit lay-filter="loginNameFilter" data-type="reload">搜索</button>
+            </form>
+            <div id="businessCount" style="height:500px;width: 1000px;top:40px"></div>
+        </div>
+        <div style="background-color: rgb(57,61,73)">
+            <!--条件显示图表-->
+            <form class="layui-form" style="position:absolute;left:44%;transform: translate(-50%);">
+                <span style="font-size: 18px;font-weight: bold;color: white;">日期区间：</span>
+                <div class="layui-inline">
+                    <div class="layui-input-inline">
+                        <input type="text" name="startTime" id="startDate" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                    </div>
+                    <span style="font-size: 18px;font-weight: bold;color: white;">—</span>
+                    <div class="layui-input-inline">
+                        <input type="text" name="endTime" id="endDate" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <button class="layui-btn" lay-submit lay-filter="timeFilter" data-type="reload">搜索</button>
+            </form>
+            <div id="performanceRanking" style="height:500px;width: 1000px;top:40px"></div>
+        </div>
+    </div>
+</div>
 </body>
 <script>
-    layui.use(['jquery'], function () {
+    //自定义layui组件的目录
+    layui.config({
+        base: '/layui/lay/modules/'
+    }).extend({
+        //设定组件别名
+        tableSelect: 'tableSelect',
+    });
+    layui.use(['jquery','table','carousel','laydate','form','tableSelect'], function () {
         var $=layui.jquery;
+        var table = layui.table;
+        var carousel = layui.carousel;
+        var laydate = layui.laydate;
+        var form = layui.form;
+        var tableSelect = layui.tableSelect
+
+        tableSelect.render({
+            elem: '#nameTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'userId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'loginName',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '真实姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url: '/user/findAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        , {field: 'userId', title: '编号', width: 80, sort: true}
+                        , {field: 'loginName', title: '登录名', width: 100}
+                        , {field: 'userName', title: '真实姓名', width: 120}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].loginName)
+            }
+        })
+
         $.ajax({
             url: "/business/businessEchart",
             type: "GET",
             dataType: "JSON",
             success: function (data) {
-
+                //商标类型总量
+                $("#trademark").html("专利：" + data.data[0]);
+                //版权类型总量
+                $("#copyright").html("商标：" + data.data[1]);
+                //专利类型总量
+                $("#patent").html("版权：" + data.data[2]);
+                //知识产权类型总量
+                $("#property").html("知识产权：" + data.data[3]);
             }
         })
-    })
+
+        //日期
+        laydate.render({
+            elem: '#startDate'
+        });
+        laydate.render({
+            elem: '#endDate'
+        });
+
+        //常规轮播
+        carousel.render({
+            elem: '#shuffling'
+            , arrow: 'always'
+            , width: '1000px'
+            , height: '540px'
+            , interval: 5000
+        });
+
+        //调用考勤图方法
+        showChartName("");
+        showChartTime("");
+
+        //表单提交
+        form.on('submit(timeFilter)', function (data) {
+            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+            let str = "?startTime="+data.field.startTime+"&endTime="+data.field.endTime
+            //调用考勤图方法
+            showChartName(str)
+            return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
+        });
+
+        //表单提交
+        form.on('submit(loginNameFilter)', function (data) {
+            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+            let str = "?loginName="+data.field.loginName
+            //调用考勤图方法
+            showChartTime(str)
+            return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
+        });
+
+        //时间为横坐标
+        function showChartTime(str) {
+            $.ajax({
+                url: "/business/showBusinessChartByAgent"+str,
+                type: "GET",
+                dataType: "JSON",
+                success: function (data) {
+                    if (data.code == 0) {
+                        //获取横坐标
+                        var X = data.data.X;
+                        // 获取y坐标1
+                        var Y = data.data.Y;
+                        // 获取y坐标2
+                        // var moneys=data.data.moneys;
+                        // 基于准备好的dom，初始化echarts实例
+                        var myChart = echarts.init(document.getElementById('businessCount'), 'chalk');
+                        // 指定图表的配置项和数据
+                        var option = {
+                            title: {
+                                text: '按月业务量',
+                                subtext: '业务量'
+                            },
+                            tooltip: {
+                                trigger: 'axis'
+                            },
+                            legend: {
+                                data: ['业务量']
+                            },
+                            toolbox: {
+                                show: true,
+                                feature: {
+                                    dataView: {show: true, readOnly: false},
+                                    magicType: {show: true, type: ['line', 'bar']},
+                                    restore: {show: true},
+                                    saveAsImage: {show: true}
+                                }
+                            },
+                            calculable: true,
+                            xAxis: [
+                                {
+                                    type: 'category',
+                                    data: X
+                                }
+                            ],
+                            yAxis: [
+                                {
+                                    type: 'value'
+                                }
+                            ],
+                            series: [
+                                {
+                                    name: '业务量',
+                                    type: 'bar',
+                                    data: Y,
+                                    markPoint: {
+                                        data: [
+                                            {type: 'max', name: '最大值'},
+                                            {type: 'min', name: '最小值'}
+                                        ]
+                                    },
+                                    markLine: {
+                                        data: [
+                                            {type: 'average', name: '平均值'}
+                                        ]
+                                    }
+                                }
+                            ]
+                        };
+                        // 使用刚指定的配置项和数据显示图表。
+                        myChart.setOption(option);
+                    }
+                }
+            });
+        }
+
+        //代理人为横坐标
+        function showChartName(str) {
+            $.ajax({
+                url: "/business/showAgentChart"+str,
+                type: "GET",
+                dataType: "JSON",
+                success: function (data) {
+                    if (data.code == 0) {
+                        //获取横坐标
+                        var moneyX = data.data.X;
+                        // 获取y坐标1
+                        var loginNameY = data.data.Y;
+                        // 获取y坐标2
+                        // var moneys=data.data.moneys;
+                        // 基于准备好的dom，初始化echarts实例
+                        var myChart1 = echarts.init(document.getElementById('performanceRanking'), 'chalk');
+                        // 指定图表的配置项和数据
+                        var option1 = {
+                            title: {
+                                text: '按人业务量',
+                                subtext: '业务量',
+                            },
+                            tooltip: {
+                                trigger: 'axis'
+                            },
+                            legend: {
+                                data: ['业务量']
+                            },
+                            toolbox: {
+                                show: true,
+                                feature: {
+                                    dataView: {show: true, readOnly: false},
+                                    magicType: {show: true, type: ['line', 'bar']},
+                                    restore: {show: true},
+                                    saveAsImage: {show: true}
+                                }
+                            },
+                            calculable: true,
+                            xAxis: [
+                                {
+                                    type: 'category',
+                                    data: moneyX
+                                }
+                            ],
+                            yAxis: [
+                                {
+                                    type: 'value'
+                                }
+                            ],
+                            series: [
+                                {
+                                    name: '业务量',
+                                    type: 'bar',
+                                    data: loginNameY,
+                                    markPoint: {
+                                        data: [
+                                            {type: 'max', name: '最大值'},
+                                            {type: 'min', name: '最小值'}
+                                        ]
+                                    },
+                                    markLine: {
+                                        data: [
+                                            {type: 'average', name: '平均值'}
+                                        ]
+                                    }
+                                }
+                            ]
+                        };
+                        // 使用刚指定的配置项和数据显示图表。
+                        myChart1.setOption(option1);
+                    }
+                }
+            });
+        }
+    });
+
+
 </script>
 </html>
