--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -61,7 +61,7 @@
 <script>
     //JavaScript代码区域
     layui.use(['element', 'jquery'], function () {
-        var element = layui.element;
+        let element = layui.element;
         let $ = layui.jquery;
         $(function () {
             //页面加载之后执行的代码
