--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -10,11 +10,13 @@
 </head>
 <body style="background-color: rgb(57,61,73)">
 <!--条件查询-->
-<form class="layui-form" style="margin-top: 10px;margin-left: 10px;position:absolute;left:50%;transform: translate(-50%);">
+<form class="layui-form"
+      style="margin-top: 10px;margin-left: 10px;position:absolute;left:50%;transform: translate(-50%);">
     <span style="font-size: 18px;font-weight: bold;color: white;">日期：</span>
     <div class="layui-inline">
         <div class="layui-input-inline">
-            <input type="text" name="attendanceTime" id="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+            <input type="text" name="attendanceTime" id="date" placeholder="yyyy-MM-dd" autocomplete="off"
+                   class="layui-input">
         </div>
     </div>
     <button class="layui-btn" lay-submit lay-filter="selectConditionFilter" data-type="reload">搜索</button>
@@ -29,17 +31,17 @@
 </div>
 </body>
 <script>
-    layui.use(['jquery','table','carousel','laydate','form'], function () {
-        var $=layui.jquery;
-        var table = layui.table;
-        var carousel = layui.carousel;
-        var laydate = layui.laydate;
-        var form = layui.form;
+    layui.use(['jquery', 'table', 'carousel', 'laydate', 'form'], function () {
+        let $ = layui.jquery;
+        let table = layui.table;
+        let carousel = layui.carousel;
+        let laydate = layui.laydate;
+        let form = layui.form;
 
         //表单提交
         form.on('submit(selectConditionFilter)', function (data) {
             console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
-            let str = "?attendanceTime="+data.field.attendanceTime
+            let str = "?attendanceTime=" + data.field.attendanceTime
             //调用考勤图方法
             showChart(str)
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
@@ -65,23 +67,23 @@
 
 
         //考勤图
-        function showChart(str){
+        function showChart(str) {
             $.ajax({
-                url: "/attendance/showAttendanceEchart"+str,
+                url: "/attendance/showAttendanceEchart" + str,
                 type: "GET",
                 dataType: "JSON",
                 success: function (data) {
                     if (data.code == 0) {
                         //获取横坐标
-                        var loginNameX = data.data.loginNameX;
+                        let loginNameX = data.data.loginNameX;
                         // 获取y坐标1
-                        var checkInY = data.data.checkInY;
+                        let checkInY = data.data.checkInY;
                         // 获取y坐标2
-                        var checkOutY = data.data.checkOutY;
+                        let checkOutY = data.data.checkOutY;
                         // 基于准备好的dom，初始化echarts实例
-                        var myChart = echarts.init(document.getElementById('attendanceEchart'), 'chalk');
+                        let myChart = echarts.init(document.getElementById('attendanceEchart'), 'chalk');
                         // 指定图表的配置项和数据
-                        var option = {
+                        let option = {
                             title: {
                                 text: '考勤时间',
                                 subtext: '时间'
@@ -90,7 +92,7 @@
                                 trigger: 'axis'
                             },
                             legend: {
-                                data: ['签到时间','签退时间']
+                                data: ['签到时间', '签退时间']
                             },
                             toolbox: {
                                 show: true,
