--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -328,7 +328,7 @@
         });
 
         //获取传过来的customId
-        var customeId = "";
+        let customeId = "";
         customeId = [[${customId}]] + "";
 
         if (customeId == 0) {
@@ -336,7 +336,7 @@
         } else {
             document.getElementById("customTable").hidden = false
             let customUrl = '/custom/selectOne?customId=' + customeId
-            var customTable = table.render({
+            let customTable = table.render({
                 elem: '#customTable'
                 , url: customUrl //数据接口
                 , page: false //开启分页
@@ -360,7 +360,7 @@
         }
 
         let businessUrl = '/business/queryByCondition?customId=' + customeId
-        var myTable = table.render({
+        let myTable = table.render({
             elem: '#businessTable'
             , url: businessUrl //数据接口
             , page: true //开启分页
@@ -454,7 +454,7 @@
 
         //监听行工具事件
         table.on('tool(test)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
-            var data = obj.data //获得当前行数据
+            let data = obj.data //获得当前行数据
                 , layEvent = obj.event; //获得 lay-event 对应的值
             if (layEvent === 'updateProgress') {
                 //跳转到进度页面
