--- a/src/main/resources/templates/businessEchart.html
+++ b/src/main/resources/templates/businessEchart.html
@@ -25,12 +25,13 @@
                 <span style="font-size: 18px;font-weight: bold;color: white;">代理人：</span>
                 <div class="layui-inline">
                     <div class="layui-input-inline">
-                        <input type="text" name="loginName" id="nameTableSelect" autocomplete="off" placeholder="请输入代理人登录名" class="layui-input">
+                        <input type="text" name="loginName" id="nameTableSelect" autocomplete="off"
+                               placeholder="请输入代理人登录名" class="layui-input">
                     </div>
                 </div>
                 <button class="layui-btn" lay-submit lay-filter="loginNameFilter" data-type="reload">搜索</button>
             </form>
-            <div id="businessCount" style="height:500px;width: 1000px;top:40px"></div>
+            <div id="businessCount" style="height:540px;width: 1400px;top:40px"></div>
         </div>
         <div style="background-color: rgb(57,61,73)">
             <!--条件显示图表-->
@@ -38,16 +39,18 @@
                 <span style="font-size: 18px;font-weight: bold;color: white;">日期区间：</span>
                 <div class="layui-inline">
                     <div class="layui-input-inline">
-                        <input type="text" name="startTime" id="startDate" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                        <input type="text" name="startTime" id="startDate" placeholder="yyyy-MM-dd" autocomplete="off"
+                               class="layui-input">
                     </div>
                     <span style="font-size: 18px;font-weight: bold;color: white;">—</span>
                     <div class="layui-input-inline">
-                        <input type="text" name="endTime" id="endDate" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                        <input type="text" name="endTime" id="endDate" placeholder="yyyy-MM-dd" autocomplete="off"
+                               class="layui-input">
                     </div>
                 </div>
                 <button class="layui-btn" lay-submit lay-filter="timeFilter" data-type="reload">搜索</button>
             </form>
-            <div id="performanceRanking" style="height:500px;width: 1000px;top:40px"></div>
+            <div id="performanceRanking" style="height:540px;width: 1400px;top:40px"></div>
         </div>
     </div>
 </div>
@@ -60,13 +63,13 @@
         //设定组件别名
         tableSelect: 'tableSelect',
     });
-    layui.use(['jquery','table','carousel','laydate','form','tableSelect'], function () {
-        var $=layui.jquery;
-        var table = layui.table;
-        var carousel = layui.carousel;
-        var laydate = layui.laydate;
-        var form = layui.form;
-        var tableSelect = layui.tableSelect
+    layui.use(['jquery', 'table', 'carousel', 'laydate', 'form', 'tableSelect'], function () {
+        let $ = layui.jquery;
+        let table = layui.table;
+        let carousel = layui.carousel;
+        let laydate = layui.laydate;
+        let form = layui.form;
+        let tableSelect = layui.tableSelect
 
         tableSelect.render({
             elem: '#nameTableSelect',	//定义输入框input对象 必填
@@ -119,9 +122,9 @@
         carousel.render({
             elem: '#shuffling'
             , arrow: 'always'
-            , width: '1000px'
+            , width: '1400px'
             , height: '540px'
-            , interval: 5000
+            , interval: 5400
         });
 
         //调用考勤图方法
@@ -131,7 +134,7 @@
         //表单提交
         form.on('submit(timeFilter)', function (data) {
             console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
-            let str = "?startTime="+data.field.startTime+"&endTime="+data.field.endTime
+            let str = "?startTime=" + data.field.startTime + "&endTime=" + data.field.endTime
             //调用考勤图方法
             showChartName(str)
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
@@ -140,7 +143,7 @@
         //表单提交
         form.on('submit(loginNameFilter)', function (data) {
             console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
-            let str = "?loginName="+data.field.loginName
+            let str = "?loginName=" + data.field.loginName
             //调用考勤图方法
             showChartTime(str)
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
@@ -149,21 +152,21 @@
         //时间为横坐标
         function showChartTime(str) {
             $.ajax({
-                url: "/business/showBusinessChartByAgent"+str,
+                url: "/business/showBusinessChartByAgent" + str,
                 type: "GET",
                 dataType: "JSON",
                 success: function (data) {
                     if (data.code == 0) {
                         //获取横坐标
-                        var X = data.data.X;
+                        let X = data.data.X;
                         // 获取y坐标1
-                        var Y = data.data.Y;
+                        let Y = data.data.Y;
                         // 获取y坐标2
-                        // var moneys=data.data.moneys;
+                        // let moneys=data.data.moneys;
                         // 基于准备好的dom，初始化echarts实例
-                        var myChart = echarts.init(document.getElementById('businessCount'), 'chalk');
+                        let myChart = echarts.init(document.getElementById('businessCount'), 'chalk');
                         // 指定图表的配置项和数据
-                        var option = {
+                        let option = {
                             title: {
                                 text: '按月业务量',
                                 subtext: '业务量'
@@ -224,21 +227,21 @@
         //代理人为横坐标
         function showChartName(str) {
             $.ajax({
-                url: "/business/showAgentChart"+str,
+                url: "/business/showAgentChart" + str,
                 type: "GET",
                 dataType: "JSON",
                 success: function (data) {
                     if (data.code == 0) {
                         //获取横坐标
-                        var moneyX = data.data.X;
+                        let moneyX = data.data.X;
                         // 获取y坐标1
-                        var loginNameY = data.data.Y;
+                        let loginNameY = data.data.Y;
                         // 获取y坐标2
-                        // var moneys=data.data.moneys;
+                        // let moneys=data.data.moneys;
                         // 基于准备好的dom，初始化echarts实例
-                        var myChart1 = echarts.init(document.getElementById('performanceRanking'), 'chalk');
+                        let myChart1 = echarts.init(document.getElementById('performanceRanking'), 'chalk');
                         // 指定图表的配置项和数据
-                        var option1 = {
+                        let option1 = {
                             title: {
                                 text: '按人业务量',
                                 subtext: '业务量',
@@ -296,7 +299,5 @@
             });
         }
     });
-
-
 </script>
 </html>
