--- a/src/main/resources/templates/custom.html
+++ b/src/main/resources/templates/custom.html
@@ -224,7 +224,7 @@
 
 
         //第一个实例
-        var myTable = table.render({
+        let myTable = table.render({
             elem: '#demo'
             , url: '/custom/selectAll' //数据接口
             , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
@@ -266,7 +266,7 @@
 
         //监听行工具栏事件
         table.on('tool(test)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
-            var data = obj.data //获得当前行数据
+            let data = obj.data //获得当前行数据
                 , layEvent = obj.event; //获得 lay-event 对应的值
             if (layEvent === 'edit') {
                 //弹出对话框之前，需要填充表单数据
