--- a/src/main/resources/templates/dictionaryType.html
+++ b/src/main/resources/templates/dictionaryType.html
@@ -35,7 +35,7 @@
 
 <script>
     layui.use('form', function () {
-        var form = layui.form;
+        let form = layui.form;
         //监听提交
         form.on('submit(insertDicType)', function (data) {
             layer.msg(JSON.stringify(data.field));
