--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -35,7 +35,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">登录名</label>
         <div class="layui-input-block">
-            <input type="text" name="loginName" id="loginName" placeholder="请输入登录名" required lay-verify="required" autocomplete="off"
+            <input type="text" name="loginName" id="loginName" placeholder="请输入登录名" required lay-verify="required"
+                   autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -110,7 +111,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">登录名</label>
         <div class="layui-input-block">
-            <input type="text" name="loginName" placeholder="请输入登录名" readonly required lay-verify="required" autocomplete="off"
+            <input type="text" name="loginName" placeholder="请输入登录名" readonly required lay-verify="required"
+                   autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -217,12 +219,12 @@
 </script>
 <script>
     layui.use(['table', 'layer', 'jquery', 'form'], function () {
-        var table = layui.table;
-        var layer = layui.layer;
-        var $ = layui.jquery;
-        var form = layui.form;
+        let table = layui.table;
+        let layer = layui.layer;
+        let $ = layui.jquery;
+        let form = layui.form;
         //第一个实例
-        var userTable = table.render({
+        let userTable = table.render({
             elem: '#user'
             , url: '/user/findAll' //数据接口
             , toolbar: '#userToolbar' //开启头部工具栏，并为其绑定左侧模板
@@ -255,10 +257,10 @@
                 ]]
         });
 
-        var $deptSelect = $("select[name=deptId]");
-        var $roleCheckBox = $("div[name=roles]");
-        var options = '';
-        var inputs = '';
+        let $deptSelect = $("select[name=deptId]");
+        let $roleCheckBox = $("div[name=roles]");
+        let options = '';
+        let inputs = '';
 
         //填充部门下拉框
         $.ajax({
@@ -321,7 +323,7 @@
 
         //头工具栏事件
         table.on('toolbar(userTableFilter)', function (obj) {
-            var checkStatus = table.checkStatus(obj.config.id)
+            let checkStatus = table.checkStatus(obj.config.id)
                 , data = checkStatus.data;
             switch (obj.event) {
                 //添加数据
@@ -330,8 +332,8 @@
                     document.getElementById("addUserForm").reset();
                     //将登录名的input颜色变为正常
                     let loginInput = document.getElementById("loginName");
-                    loginInput.style="";
-                    var $input = $("input[name=role]");
+                    loginInput.style = "";
+                    let $input = $("input[name=role]");
                     for (let j = 0; j < $input.length; j++) {
                         $input[j].checked = false
                     }
@@ -347,7 +349,7 @@
                 //删除选择的数据
                 case 'delSelected':
                     layer.confirm('真的删除行么', function (index) {
-                        var userIds = [];
+                        let userIds = [];
                         for (let i = 0; i < data.length; i++) {
                             userIds[i] = data[i].userId
                         }
@@ -375,7 +377,7 @@
         //addUserForm表单的提交
         form.on('submit(addUserFilter)', function (data) {
             data.field.role = "";
-            var checkedInput = $('input[name=role]:checked');
+            let checkedInput = $('input[name=role]:checked');
             for (let i = 0; i < checkedInput.length; i++) {
                 if (i === checkedInput.length - 1) {
                     data.field.role += checkedInput[i].value
@@ -423,7 +425,7 @@
 
         //行工具栏事件
         table.on('tool(userTableFilter)', function (obj) {
-            var data = obj.data
+            let data = obj.data
             switch (obj.event) {
                 case 'resetPassword':
                     //将表单清空
@@ -441,7 +443,7 @@
                 case 'edit':
                     //将表单清空
                     document.getElementById("updateUserForm").reset();
-                    var $input = $("input[name=role]");
+                    let $input = $("input[name=role]");
                     for (let j = 0; j < $input.length; j++) {
                         $input[j].checked = false
                     }
@@ -517,7 +519,7 @@
         //update表单的提交
         form.on('submit(updateUserFilter)', function (data) {
                 data.field.role = "";
-                var checkedInput = $('input[name=role]:checked');
+                let checkedInput = $('input[name=role]:checked');
                 for (let i = 0; i < checkedInput.length; i++) {
                     if (i === checkedInput.length - 1) {
                         data.field.role += checkedInput[i].value
@@ -584,16 +586,16 @@
         });
 
         //鼠标失焦判断用户名是否存在
-        $("#loginName").blur(function(){
-            var loginName = this.value;
-            var loginInput = document.getElementById("loginName");
-            $.get('/user/checkLoginName',{loginName:loginName},function (data) {
-                if(data==='false'){
-                    loginInput.style="border-color: red";
-                    layer.msg('['+loginName+']登录名已经被占用',{icon: 5});//!,ok,wrong,question,lock,cry,smile
+        $("#loginName").blur(function () {
+            let loginName = this.value;
+            let loginInput = document.getElementById("loginName");
+            $.get('/user/checkLoginName', {loginName: loginName}, function (data) {
+                if (data === 'false') {
+                    loginInput.style = "border-color: red";
+                    layer.msg('[' + loginName + ']登录名已经被占用', {icon: 5});//!,ok,wrong,question,lock,cry,smile
                 }
             });
-        })
+        });
     });
 </script>
 </html>
